# go-langfuse

./: .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  Taskfile.yml  api_golden_test.go  api_surface_test.go  api_test.go  baggage.go  baggage_test.go  buffering_test.go  client.go  client_contract_test.go  context.go  doc.go  edge_contract_test.go  example_test.go  export_test.go  go.mod  go.sum  go.work  go.work.sum  interop_test.go  lifecycle_adversary_test.go  live_test.go  observation.go  observation_wire_test.go  observe_test.go  processor.go  processor_test.go  prompt.go  prompt_cache.go  prompt_cache_test.go  prompt_test.go  prompt_wire_test.go  (+8 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  matrix.yml  release.yml
contrib/googlegenai/: CHANGELOG.md  README.md  example_test.go  go.mod  go.sum  parse.go  parse_test.go  protocol.go  protocol_test.go  render_test.go  transport.go
contrib/integrationtest/: genai_sdk_test.go  go.mod  go.sum  harness_test.go  live_test.go  openai_official_sdk_test.go  openai_sdk_test.go
docs/: compatibility.md  existing-opentelemetry.md  privacy.md  reference.md  support-matrix.md
scripts/: check-readme-quickstart.sh
validation/: .gitignore  README.md  azure_test.go  baggage_live_test.go  go.mod  go.sum  harness_test.go  interop_test.go  matrix.json  openrouter_test.go  parity_responses_test.go  parity_test.go  responses_test.go  vertex_test.go
validation/parity/: interop_oracle.py  log_call.py  log_responses.py  pyproject.toml
(+63 files in other folders)
